StringPool测试以及学习的xmind